# gittest_vserv_ns

./: CMakeLists.txt
cmake/Modules/: FindENet.cmake
include/vserv/: UDPSocket.h  ns_vserv_helpers.h  ns_vserv_net_main.h
src/: ns_vserv_net_main.cpp
